objects/DCCA_DO_Ref_History_Comment__c.object
<CustomObject>
    <label>DCCA DO Ref History Comment</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>DCCA DO Ref History Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCCA DO Ref History Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>DOR_Ref_NO__c</fullName>
        <description>Referral NO from DOR Referral</description>
        <label>DOR Ref NO</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_DIV2_CC__c</fullName>
        <label>DCCA DO DIV2 CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_DIV2_CC2__c</fullName>
        <label>DCCA DO DIV2 CC2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_DIV2_CC3__c</fullName>
        <label>DCCA DO DIV2 CC3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_Referral__c</fullName>
        <label>DCCA DO Referral</label>
        <referenceTo>DCCA_DO_Referral__c</referenceTo>
        <relationshipLabel>DCCA DO Ref History Comments</relationshipLabel>
        <relationshipName>DCCA_DO_Ref_History_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DCCA_Comment_Date__c</fullName>
        <description>setting history comment date field equal to DCCA DO Referral comment date</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DCCA Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DCCA_Comment_Text__c</fullName>
        <label>DCCA Comment Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_Comment_DIV__c</fullName>
        <label>DCCA DO Comment DIV</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_DIV2_primary__c</fullName>
        <label>DCCA DO DIV2 primary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_DIV2_primary2__c</fullName>
        <label>DCCA DO DIV2 primary2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_DIV2_primary3__c</fullName>
        <label>DCCA DO DIV2 primary3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_Comment_SendTo__c</fullName>
        <label>DCCA DO Comment SendTo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To DIV</fullName>
                </value>
                <value>
                    <fullName>To DO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_Ref_Additional_Info__c</fullName>
        <label>DO Ref Additional Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DCCA_Comment_Date__c</columns>
        <columns>DCCA_Comment_Text__c</columns>
        <columns>DCCA_DO_Comment_SendTo__c</columns>
        <columns>DCCA_DO_Referral__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DCCA_DO_Ref_History_Comments_List</fullName>
        <columns>NAME</columns>
        <columns>DCCA_DO_Referral__c</columns>
        <columns>DOR_Ref_NO__c</columns>
        <columns>DCCA_DO_Comment_DIV__c</columns>
        <columns>DCCA_Comment_Date__c</columns>
        <columns>DCCA_Comment_Text__c</columns>
        <columns>DCCA_DO_Comment_SendTo__c</columns>
        <filterScope>Everything</filterScope>
        <label>DCCA DO Ref History Comments List</label>
    </listViews>
    <recordTypes>
        <fullName>DCCA_DO_Ref_Comments</fullName>
        <active>true</active>
        <label>DCCA DO Ref Comments</label>
    </recordTypes>
</CustomObject>